Trying to fix text alignment

--- a/zev/assets/scss/_content.scss
+++ b/zev/assets/scss/_content.scss
@@ -41,7 +41,8 @@
 
     p {
       text-align: justify;
-      text-justify: auto;
+      text-justify: distribute;
+      text-align-last: left;
       hyphens: auto;
     }
   }
